Added time picker option to plugin
This integrated some code from the bootstrap-timepicker plugin, and added a
toggle button to switch between pickers when the widget has been initialized
with both.

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -8,7 +8,7 @@
  */
 @import "variables.less"; 
 @import "mixins.less"; 
-.datepicker {
+.datetimepicker {
 	top: 0;
 	left: 0;
 	padding: 4px;
@@ -35,9 +35,12 @@
 		top: -6px;
 		left: 7px;
 	}
-	>div {
+	.datepicker > div {
 		display: none;
 	}
+        .picker-switch {
+          text-align: center;
+        }
 	table{
 		width: 100%;
 		margin: 0;
