Implemented basic timepicker widget interations

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -35,6 +35,10 @@
 		top: -6px;
 		left: 7px;
 	}
+	.timepicker-hour, .timepicker-minute, .timepicker-second {
+		font-weight: bold;
+		font-size: 1.2em;
+	}
 	.datepicker > div {
 		display: none;
 	}
