Removed some offending css rules

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -199,19 +199,19 @@ blockquote {
   border-left: 3px solid #bbb;
 }
 
-ul, ol, dl {
-  margin-bottom: 15px
-}
+/* ul, ol, dl { */
+/*   margin-bottom: 15px */
+/* } */
 
-ul li {
-  list-style: inside;
-  padding-left: 20px;
-}
+/* ul li { */
+/*   list-style: inside; */
+/*   padding-left: 20px; */
+/* } */
 
-ol li {
-  list-style: decimal inside;
-  padding-left: 20px;
-}
+/* ol li { */
+/*   list-style: decimal inside; */
+/*   padding-left: 20px; */
+/* } */
 
 dl dt {
   font-weight: bold;
@@ -234,11 +234,11 @@ hr {
   background: url('../images/bg_hr.png') repeat-x center;
 }
 
-table {
-  border: 1px solid #373737;
-  margin-bottom: 20px;
-  text-align: left;
- }
+/* table { */
+/*   border: 1px solid #373737; */
+/*   margin-bottom: 20px; */
+/*   text-align: left; */
+/*  } */
 
 th {
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
