--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -240,17 +240,17 @@ hr {
 /*   text-align: left; */
 /*  } */
 
-th {
-  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  padding: 10px;
-  background: #373737;
-  color: #fff;
- }
+/* th { */
+/*   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif; */
+/*   padding: 10px; */
+/*   background: #373737; */
+/*   color: #fff; */
+/*  } */
 
-td {
-  padding: 10px;
-  border: 1px solid #373737;
- }
+/* td { */
+/*   padding: 10px; */
+/*   border: 1px solid #373737; */
+/*  } */
 
 form {
   background: #f2f2f2;
