--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -6,52 +6,6 @@ by Jason Costello, @jsncostello
 @import url(pygment_trac.css);
 
 /*******************************************************************************
-MeyerWeb Reset
-*******************************************************************************/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-a:focus {
-  outline: none;
-}
-
-/*******************************************************************************
 Theme Styles
 *******************************************************************************/
 
@@ -81,7 +35,7 @@ h1 {
 h2 {
   padding-bottom: 10px;
   font-size: 32px;
-  background: url('../images/bg_hr.png') repeat-x bottom;
+  background: url('../img/bg_hr.png') repeat-x bottom;
 }
 
 h3 {
@@ -169,9 +123,6 @@ pre, code {
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
-
-
-
 }
 
 pre {
@@ -199,20 +150,6 @@ blockquote {
   border-left: 3px solid #bbb;
 }
 
-/* ul, ol, dl { */
-/*   margin-bottom: 15px */
-/* } */
-
-/* ul li { */
-/*   list-style: inside; */
-/*   padding-left: 20px; */
-/* } */
-
-/* ol li { */
-/*   list-style: decimal inside; */
-/*   padding-left: 20px; */
-/* } */
-
 dl dt {
   font-weight: bold;
 }
@@ -231,26 +168,8 @@ hr {
   height: 1px;
   margin-bottom: 5px;
   border: none;
-  background: url('../images/bg_hr.png') repeat-x center;
+  background: url('../img/bg_hr.png') repeat-x center;
 }
-
-/* table { */
-/*   border: 1px solid #373737; */
-/*   margin-bottom: 20px; */
-/*   text-align: left; */
-/*  } */
-
-/* th { */
-/*   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif; */
-/*   padding: 10px; */
-/*   background: #373737; */
-/*   color: #fff; */
-/*  } */
-
-/* td { */
-/*   padding: 10px; */
-/*   border: 1px solid #373737; */
-/*  } */
 
 form {
   background: #f2f2f2;
@@ -285,7 +204,7 @@ Full-Width Styles
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
+  background: url('../img/blacktocat.png') #0090ff no-repeat 95% 50%;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 2px;
@@ -328,7 +247,7 @@ Full-Width Styles
   bottom: -40px;
   right: 0;
   height: 70px;
-  background: url('../images/icon_download.png') no-repeat 0% 90%;
+  background: url('../img/icon_download.png') no-repeat 0% 90%;
 }
 
 .zip_download_link {
@@ -338,7 +257,7 @@ Full-Width Styles
   height:70px;
   text-indent: -5000px;
   overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
+  background: url(../img/sprite_download.png) no-repeat bottom left;
 }
 
 .tar_download_link {
@@ -348,16 +267,16 @@ Full-Width Styles
   height:70px;
   text-indent: -5000px;
   overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom right;
+  background: url(../img/sprite_download.png) no-repeat bottom right;
   margin-left: 10px;
 }
 
 .zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
+  background: url(../img/sprite_download.png) no-repeat top left;
 }
 
 .tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
+  background: url(../img/sprite_download.png) no-repeat top right;
 }
 
 #main_content_wrap {
