Updated to jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Date/Time widget for Twitter Bootstrap"/>
+    <meta name="description" content="{{ page.projectDescription }}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="author" content="{{ page.author }}" />
     <title>{{ page.title }}</title>
