Improved site architecture

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="author" content="{{ page.author }}" />
     <title>{{ page.title }}</title>
-    {{% include css.html %}}
+    {% include css.html %}
   </head>
   <body>
 
@@ -34,7 +34,7 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    {{% include js.html %}}
+    {% include js.html %}
   </body>
 </html>
 
