--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="author" content="{{ page.author }}" />
     <title>{{ page.title }}</title>
+    <!--[if lt IE 9]>
+      <script type="text/javascript"
+        src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
+      <script type="text/javascript"
+        src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
+    <![endif]-->
     {% include css.html %}
   </head>
   <body>
@@ -16,9 +22,9 @@
         <a id="forkme_banner" href="{{ page.githubUrl }}">View on GitHub</a>
         <h1 id="project_title">{{ page.projectName }}</h1>
         <h2 id="project_tagline">{{ page.projectDescription }}</h2>
-          <section id="downloads">
-            <a class="zip_download_link" href="{{ page.downloadUrl }}">Download this project as a .zip file</a>
-          </section>
+        <section id="downloads">
+          <a class="zip_download_link" href="{{ page.downloadUrl }}">Download this project as a .zip file</a>
+        </section>
       </header>
     </div>
     <!-- content -->
