--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="author" content="{{ page.author }}" />
     <title>{{ page.title }}</title>
+    {% include css.html %}
     <!--[if lt IE 9]>
+      <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet">
       <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
       <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
     <![endif]-->
-    {% include css.html %}
   </head>
   <body>
 
