--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,21 +14,21 @@
     <![endif]-->
     {% include css.html %}
     <!--[if IE 7]>
-      <link rel="stylesheet" href="css/font-awesome-ie7.css">
+      <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet">
     <![endif]-->
   </head>
   <body>
 
     <!-- header -->
     <div id="header_wrap" class="outer">
-      <header class="inner">
+      <div class="inner">
         <a id="forkme_banner" href="{{ page.githubUrl }}">View on GitHub</a>
         <h1 id="project_title">{{ page.projectName }}</h1>
         <h2 id="project_tagline">{{ page.projectDescription }}</h2>
         <div id="downloads">
           <a class="zip_download_link" href="{{ page.downloadUrl }}">Download this project as a .zip file</a>
         </div>
-      </header>
+      </div>
     </div>
     <!-- content -->
     <div id="main_content_wrap" class="outer">
