--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,11 @@
     <title>{{ page.title }}</title>
     <!--[if lt IE 9]>
       <script type="text/javascript"
-        src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
-      <script type="text/javascript"
         src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script type="text/javascript"
+        src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
     <![endif]-->
+    <link href="assets/css/layout.css" rel="stylesheet">
     {% include css.html %}
     <!--[if IE 7]>
       <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet">
@@ -21,27 +22,27 @@
 
     <!-- header -->
     <div id="header_wrap" class="outer">
-      <div class="inner">
+      <header class="inner">
         <a id="forkme_banner" href="{{ page.githubUrl }}">View on GitHub</a>
         <h1 id="project_title">{{ page.projectName }}</h1>
         <h2 id="project_tagline">{{ page.projectDescription }}</h2>
-        <div id="downloads">
+        <section id="downloads">
           <a class="zip_download_link" href="{{ page.downloadUrl }}">Download this project as a .zip file</a>
-        </div>
-      </div>
+        </section>
+      </header>
     </div>
     <!-- content -->
     <div id="main_content_wrap" class="outer">
-      <div id="main_content" class="inner">
+      <section id="main_content" class="inner">
         {{ content }}
-      </div>
+      </section>
     </div>
     <!-- footer  -->
     <div id="footer_wrap" class="outer">
-      <div class="inner">
+      <footer class="inner">
         <p class="copyright">{{ page.projectName }} maintained by <a href="{{ page.authorUrl }}">{{ page.author }}</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </div>
+      </footer>
     </div>
     {% include js.html %}
   </body>
