Removed font-awesome

--- a/_includes/demo.html
+++ b/_includes/demo.html
@@ -2,7 +2,8 @@
   <div id="datetimepicker" class="input-append date">
     <input type="text"></input>
     <span class="add-on">
-      <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
+      <i data-time-icon="icon-time" data-date-icon="icon-calendar"
+        class="icon-calendar"></i>
     </span>
   </div>
 </div>
