Updated to new version of the bootstrap directory

--- a/_includes/css.html
+++ b/_includes/css.html
@@ -1,3 +1,6 @@
+<link href="assets/css/bootstrap.css" rel="stylesheet">
+<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" media="screen" href="assets/css/layout.css">
 {% for url in page.css %}
 <link rel="stylesheet" type="text/css" media="screen" href="{{url}}">
 {% endfor %}
