--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
 {% for url in page.js %}
 <script type="text/javascript" src="{{url}}"></script> 
 {% endfor %}
