--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <div class="outer">
       <!-- header -->
       <div id="header-wrap" class="row-fluid">
-        <a href="https://github.com/you"><img
+        <a href="{{ page.githubUrl }}"><img
           style="position: absolute; top: 0; right: 0; border: 0;"
           src="assets/img/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
         <header class="span6 offset3">
