Fixed width and list style on mixed widget

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -11,6 +11,7 @@
 .datetimepicker {
 	top: 0;
 	left: 0;
+	width: 250px;
 	padding: 4px;
 	margin-top: 1px;
 	.border-radius(4px);
@@ -34,6 +35,10 @@
 		position: absolute;
 		top: -6px;
 		left: 7px;
+	}
+	>ul {
+		list-style-type: none;
+		margin: 0;
 	}
 	.timepicker-hour, .timepicker-minute, .timepicker-second {
 		font-weight: bold;
