--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -44,6 +44,11 @@
     font-weight: bold;
     font-size: 1.2em;
   }
+  table[data-hour-format="12"] .separator {
+    width: 4px;
+    padding: 0;
+    margin: 0;
+  }
   .datepicker > div {
     display: none;
   }
