Improved time picker with hour/minute/second view

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -67,7 +67,10 @@
     .border-radius(4px);
   }
   td {
-    &.day:hover {
+    &.day:hover,
+    &.hour:hover,
+    &.minute:hover,
+    &.second:hover, {
       background: @grayLighter;
       cursor: pointer;
     }
