Changed widget class nam

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -8,7 +8,7 @@
  */
 @import "variables.less"; 
 @import "mixins.less"; 
-.datetimepicker {
+.bootstrap-datetimepicker-widget {
   top: 0;
   left: 0;
   width: 250px;
