Adds option to hide the seconds selector. fixes #22

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -42,6 +42,7 @@
     margin: 0;
   }
   .timepicker-hour, .timepicker-minute, .timepicker-second {
+    width: 100%;
     font-weight: bold;
     font-size: 1.2em;
   }
