--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -158,3 +158,13 @@
     }
   }
 }
+.bootstrap-datetimepicker-widget.left-oriented {
+    &:before {
+        left: auto;
+        right: 6px;
+    }
+    &:after {
+        left: auto;
+        right: 7px;
+    }
+}
