--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -82,6 +82,16 @@
     {
         display: none;
     }
+	
+	.datepicker
+	{
+		span
+		{
+            width: 53px;
+            height: 54px;
+            line-height: 54px;
+		}
+	}
 
     .picker-switch
     {
@@ -139,9 +149,6 @@
         span
         {
             display: block;
-            width: 47px;
-            height: 54px;
-            line-height: 54px;
             float: left;
             margin: 2px;
             cursor: pointer;
