fixed LESS file, ran build

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -6,7 +6,7 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  */
-@import "../bootstrap/variables.less";
+@import "../../bootstrap/less/variables.less";
 
 .bootstrap-datetimepicker-widget
 {
@@ -114,20 +114,20 @@
         &.minute:hover,
         &.second:hover
         {
-            background: @gray-lighter;
+            background: @grayLighter;
             cursor: pointer;
         }
 
         &.old,
         &.new
         {
-            color: @gray-light;
+            color: @grayLight;
         }
 
         &.active,
         &.active:hover
         {
-            background-color: @btn-primary-bg;
+            background-color: @btnPrimaryBackground;
             color: #fff;
             text-shadow: 0 -1px 0 rgba(0,0,0,.25);
         }
@@ -136,7 +136,7 @@
         &.disabled:hover
         {
             background: none;
-            color: @gray-light;
+            color: @grayLight;
             cursor: not-allowed;
         }
 
@@ -153,26 +153,26 @@
 
             &:hover
             {
-                background: @gray-lighter;
+                background: @grayLighter;
             }
 
             &.active
             {
-                background-color: @btn-primary-bg;
+                background-color: @btnPrimaryBackground;
                 color: #fff;
                 text-shadow: 0 -1px 0 rgba(0,0,0,.25);
             }
 
             &.old
             {
-                color: @gray-light;
+                color: @grayLight;
             }
 
             &.disabled,
             &.disabled:hover
             {
                 background: none;
-                color: @gray-light;
+                color: @grayLight;
                 cursor: not-allowed;
             }
         }
@@ -188,14 +188,14 @@
         &.next,
         &.prev
         {
-            font-size: @font-size-base * 1.5;
+            font-size: @baseFontSize * 1.5;
         }
 
         &.disabled,
         &.disabled:hover
         {
             background: none;
-            color: @gray-light;
+            color: @grayLight;
             cursor: not-allowed;
         }
     }
@@ -206,7 +206,7 @@
 
         &:hover
         {
-            background: @gray-lighter;
+            background: @grayLighter;
         }
     }
     /*.dow {
