fixed bootstrap submodule to master (3.0.0+) and resolved LESS variables

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -114,20 +114,20 @@
         &.minute:hover,
         &.second:hover
         {
-            background: @grayLighter;
+            background: @gray-lighter;
             cursor: pointer;
         }
 
         &.old,
         &.new
         {
-            color: @grayLight;
+            color: @gray-light;
         }
 
         &.active,
         &.active:hover
         {
-            background-color: @btnPrimaryBackground;
+            background-color: @btn-primary-bg;
             color: #fff;
             text-shadow: 0 -1px 0 rgba(0,0,0,.25);
         }
@@ -136,7 +136,7 @@
         &.disabled:hover
         {
             background: none;
-            color: @grayLight;
+            color: @gray-light;
             cursor: not-allowed;
         }
 
@@ -153,26 +153,26 @@
 
             &:hover
             {
-                background: @grayLighter;
+                background: @gray-lighter;
             }
 
             &.active
             {
-                background-color: @btnPrimaryBackground;
+                background-color: @btn-primary-bg;
                 color: #fff;
                 text-shadow: 0 -1px 0 rgba(0,0,0,.25);
             }
 
             &.old
             {
-                color: @grayLight;
+                color: @gray-light;
             }
 
             &.disabled,
             &.disabled:hover
             {
                 background: none;
-                color: @grayLight;
+                color: @gray-light;
                 cursor: not-allowed;
             }
         }
@@ -188,14 +188,14 @@
         &.next,
         &.prev
         {
-            font-size: @baseFontSize * 1.5;
+            font-size: @font-size-base * 1.5;
         }
 
         &.disabled,
         &.disabled:hover
         {
             background: none;
-            color: @grayLight;
+            color: @gray-light;
             cursor: not-allowed;
         }
     }
@@ -206,7 +206,7 @@
 
         &:hover
         {
-            background: @grayLighter;
+            background: @gray-lighter;
         }
     }
     /*.dow {
