Fix build errors, update to latest bootstrap 3.
It seems that the git submodule for bootstrap pointed to old boostrap 2.3.* and
"@import variables" had an invalid path. Updated to latest boostrap 3.0.3 and
fixed the path. Also commiting updated dist files.

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -6,7 +6,7 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  */
-@import "../../bootstrap/variables.less";
+@import "../../bootstrap/less/variables.less";
 
 .bootstrap-datetimepicker-widget
 {
