--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -26,10 +26,7 @@
         display: inline-block;
         border-left: 7px solid transparent;
         border-right: 7px solid transparent;
-        border-bottom: 7px solid #ccc;
-        border-bottom-color: rgba(0,0,0,.2);
         position: absolute;
-        top: -7px;
         left: 6px;
     }
 
@@ -39,10 +36,40 @@
         display: inline-block;
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
-        border-bottom: 6px solid white;
         position: absolute;
-        top: -6px;
         left: 7px;
+    }
+
+    &.up
+    {
+        &:before
+        {
+            border-top: 7px solid #ccc;
+            border-top-color: rgba(0, 0, 0, 0.2);
+            bottom: -7px;
+        }
+
+        &:after
+        {
+            border-top: 6px solid white;
+            bottom: -6px;
+        }
+    }
+
+    &.down
+    {
+        &:before
+        {
+            border-bottom: 7px solid #ccc;
+            border-bottom-color: rgba(0, 0, 0, 0.2);
+            top: -7px;
+        }
+
+        &:after
+        {
+            border-bottom: 6px solid white;
+            top: -6px;
+        }
     }
 
     &.pull-right
