Side-by-side support

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -15,6 +15,10 @@
     margin-top: 1px;
     z-index: 99999;
     border-radius: 4px;
+    
+    &.timepicker-sbs{
+        width: 600px;
+    }
 
     .btn {
         padding:6px;
