--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -1,145 +1,172 @@
 /*!
  * Datetimepicker for Bootstrap v3
  * https://github.com/Eonasdan/bootstrap-datetimepicker/
- * Copyright 2012 Stefan Petre
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
  */
-.bootstrap-datetimepicker-widget
-{
+.bootstrap-datetimepicker-widget {
     top: 0;
     left: 0;
     width: 250px;
     padding: 4px;
     margin-top: 1px;
-    z-index: 99999;
+    z-index: 99999 !important;
     border-radius: 4px;
 
-    .btn {
-        padding:6px;
+    &.timepicker-sbs {
+        width: 600px;
     }
 
-    &:before
-    {
-        content: '';
-        display: inline-block;
-        border-left: 7px solid transparent;
-        border-right: 7px solid transparent;
-        border-bottom: 7px solid #ccc;
-        border-bottom-color: rgba(0,0,0,.2);
-        position: absolute;
-        top: -7px;
-        left: 6px;
+    &.bottom {
+        &:before {
+            content: '';
+            display: inline-block;
+            border-left: 7px solid transparent;
+            border-right: 7px solid transparent;
+            border-bottom: 7px solid #ccc;
+            border-bottom-color: rgba(0,0,0,.2);
+            position: absolute;
+            top: -7px;
+            left: 7px;
+        }
+
+        &:after {
+            content: '';
+            display: inline-block;
+            border-left: 6px solid transparent;
+            border-right: 6px solid transparent;
+            border-bottom: 6px solid white;
+            position: absolute;
+            top: -6px;
+            left: 8px;
+        }
     }
 
-    &:after
-    {
-        content: '';
-        display: inline-block;
-        border-left: 6px solid transparent;
-        border-right: 6px solid transparent;
-        border-bottom: 6px solid white;
-        position: absolute;
-        top: -6px;
-        left: 7px;
+    &.top {
+        &:before {
+            content: '';
+            display: inline-block;
+            border-left: 7px solid transparent;
+            border-right: 7px solid transparent;
+            border-top: 7px solid #ccc;
+            border-top-color: rgba(0,0,0,.2);
+            position: absolute;
+            bottom: -7px;
+            left: 6px;
+        }
+
+        &:after {
+            content: '';
+            display: inline-block;
+            border-left: 6px solid transparent;
+            border-right: 6px solid transparent;
+            border-top: 6px solid white;
+            position: absolute;
+            bottom: -6px;
+            left: 7px;
+        }
     }
 
-    &.pull-right
-    {
-        &:before
-        {
+    & .dow {
+        width: 14.2857%;
+    }
+
+    &.pull-right {
+        &:before {
             left: auto;
             right: 6px;
         }
 
-        &:after
-        {
+        &:after {
             left: auto;
             right: 7px;
         }
     }
 
-    >ul
-    {
+    >ul {
         list-style-type: none;
         margin: 0;
     }
 
-    .timepicker-hour, .timepicker-minute, .timepicker-second
-    {
+    .timepicker-hour, .timepicker-minute, .timepicker-second {
         width: 100%;
         font-weight: bold;
         font-size: 1.2em;
     }
 
-    table[data-hour-format="12"] .separator
-    {
+    table[data-hour-format="12"] .separator {
         width: 4px;
         padding: 0;
         margin: 0;
     }
 
-    .datepicker > div
-    {
+    .datepicker > div {
         display: none;
     }
 
-    .picker-switch
-    {
+    .picker-switch {
         text-align: center;
     }
 
-    table
-    {
+    table {
         width: 100%;
         margin: 0;
     }
 
     td,
-    th
-    {
+    th {
         text-align: center;
         width: 20px;
         height: 20px;
         border-radius: 4px;
     }
 
-    td
-    {
+    td {
         &.day:hover,
         &.hour:hover,
         &.minute:hover,
-        &.second:hover
-        {
+        &.second:hover {
             background: @gray-lighter;
             cursor: pointer;
         }
 
         &.old,
-        &.new
-        {
+        &.new {
             color: @gray-light;
         }
 
+        &.today {
+            position: relative;
+
+            &:before {
+                content: '';
+                display: inline-block;
+                border-left: 7px solid transparent;
+                border-bottom: 7px solid @btn-primary-bg;
+                border-top-color: rgba(0, 0, 0, 0.2);
+                position: absolute;
+                bottom: 4px;
+                right: 4px;
+            }
+        }
+
         &.active,
-        &.active:hover
-        {
+        &.active:hover {
             background-color: @btn-primary-bg;
             color: #fff;
             text-shadow: 0 -1px 0 rgba(0,0,0,.25);
         }
 
+            &.active.today:before {
+                border-bottom-color: #fff;
+            }
+
         &.disabled,
-        &.disabled:hover
-        {
+        &.disabled:hover {
             background: none;
             color: @gray-light;
             cursor: not-allowed;
         }
 
-        span
-        {
+        span {
             display: block;
             width: 47px;
             height: 54px;
@@ -149,26 +176,22 @@
             cursor: pointer;
             border-radius: 4px;
 
-            &:hover
-            {
+            &:hover {
                 background: @gray-lighter;
             }
 
-            &.active
-            {
+            &.active {
                 background-color: @btn-primary-bg;
                 color: #fff;
                 text-shadow: 0 -1px 0 rgba(0,0,0,.25);
             }
 
-            &.old
-            {
+            &.old {
                 color: @gray-light;
             }
 
             &.disabled,
-            &.disabled:hover
-            {
+            &.disabled:hover {
                 background: none;
                 color: @gray-light;
                 cursor: not-allowed;
@@ -176,48 +199,36 @@
         }
     }
 
-    th
-    {
-        &.switch
-        {
+    th {
+        &.switch {
             width: 145px;
         }
 
         &.next,
-        &.prev
-        {
+        &.prev {
             font-size: @font-size-base * 1.5;
         }
 
         &.disabled,
-        &.disabled:hover
-        {
+        &.disabled:hover {
             background: none;
             color: @gray-light;
             cursor: not-allowed;
         }
     }
 
-    thead tr:first-child th
-    {
+    thead tr:first-child th {
         cursor: pointer;
 
-        &:hover
-        {
+        &:hover {
             background: @gray-lighter;
         }
     }
-    /*.dow {
-  border-top: 1px solid #ddd !important;
-  }*/
 }
 
-.input-group
-{
-    &.date
-    {
-        .input-group-addon span
-        {
+.input-group {
+    &.date {
+        .input-group-addon span {
             display: block;
             cursor: pointer;
             width: 16px;
@@ -226,21 +237,18 @@
     }
 }
 
-.bootstrap-datetimepicker-widget.left-oriented
-{
-    &:before
-    {
+.bootstrap-datetimepicker-widget.left-oriented {
+    &:before {
         left: auto;
         right: 6px;
     }
 
-    &:after
-    {
+    &:after {
         left: auto;
         right: 7px;
     }
 }
-.bootstrap-datetimepicker-widget ul.list-unstyled li.in div.timepicker div.timepicker-picker table.table-condensed tbody > tr > td
-{
+
+.bootstrap-datetimepicker-widget ul.list-unstyled li div.timepicker div.timepicker-picker table.table-condensed tbody > tr > td {
     padding: 0px !important;
 }
