--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -86,10 +86,19 @@
         margin: 0;
     }
 
+    a[data-action] {
+      padding: 6px 0;
+    }
+
     .timepicker-hour, .timepicker-minute, .timepicker-second {
-        width: 100%;
+        width: 54px;
         font-weight: bold;
         font-size: 1.2em;
+        margin: 0;
+    }
+
+    button[data-action] {
+      padding: 6px;
     }
 
     table[data-hour-format="12"] .separator {
@@ -114,12 +123,21 @@
     td,
     th {
         text-align: center;
-        width: 20px;
-        height: 20px;
         border-radius: 4px;
     }
 
     td {
+        height: 54px;
+        line-height: 54px;
+        width: 54px;
+
+        &.day
+        {
+            height: 20px;
+            line-height: 20px;
+            width: 20px;
+        }
+
         &.day:hover,
         &.hour:hover,
         &.minute:hover,
@@ -168,11 +186,11 @@
 
         span {
             display: block;
-            width: 47px;
+            width: 54px;
             height: 54px;
             line-height: 54px;
             float: left;
-            margin: 2px;
+            margin: 2px 1.5px;
             cursor: pointer;
             border-radius: 4px;
 
@@ -200,6 +218,10 @@
     }
 
     th {
+        height: 20px;
+        line-height: 20px;
+        width: 20px;
+
         &.switch {
             width: 145px;
         }
