more styling errors

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -241,7 +241,11 @@
                     .today:before {
                         border-bottom-color: #fff;
                     }
+                    & td:hover{
+                        background-color: @btn-primary-bg;
+                    }
                 }
+
             }
         }
     }
