--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -9,7 +9,7 @@
     padding: 4px;
     margin-top: 1px;
     z-index: 99999 !important;
-    border-radius: 4px;
+    border-radius: @border-radius-base;
 
     &.timepicker-sbs {
         width: 600px;
@@ -123,7 +123,7 @@
     td,
     th {
         text-align: center;
-        border-radius: 4px;
+        border-radius: @border-radius-base;
     }
 
     td {
@@ -192,7 +192,7 @@
             float: left;
             margin: 2px 1.5px;
             cursor: pointer;
-            border-radius: 4px;
+            border-radius: @border-radius-base;
 
             &:hover {
                 background: @gray-lighter;
