Use more-specific class in place of 'switch' to avoid common conflicts

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -222,7 +222,7 @@
         line-height: 20px;
         width: 20px;
 
-        &.switch {
+        &.picker-switch {
             width: 145px;
         }
 
