fixed case of setting the locale when options.format is not set, added toggle for active class upon hide/show on input-group-addon element when it has a btn class, cleanup on less

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -244,28 +244,17 @@
             background: @gray-lighter;
         }
     }
-}
 
-.input-group {
-    &.date {
-        .input-group-addon span {
-            display: block;
-            cursor: pointer;
-            width: 16px;
-            height: 16px;
+    &.left-oriented {
+        &:before {
+            left: auto;
+            right: 6px;
         }
-    }
-}
 
-.bootstrap-datetimepicker-widget.left-oriented {
-    &:before {
-        left: auto;
-        right: 6px;
-    }
-
-    &:after {
-        left: auto;
-        right: 7px;
+        &:after {
+            left: auto;
+            right: 7px;
+        }
     }
 }
 
