[ADD] calendar week option

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -132,6 +132,13 @@
         line-height: 54px;
         width: 54px;
 
+        &.cw
+        {
+            font-size: 10px;
+            height: 20px;
+            line-height: 20px;
+        }
+
         &.day
         {
             height: 20px;
