--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -135,6 +135,13 @@
         line-height: 54px;
         width: 54px;
 
+        &.cw {
+            font-size: 10px;
+            height: 20px;
+            line-height: 20px;
+            color: @gray-light;
+        }
+
         &.day
         {
             height: 20px;
