Added ability to display an inline element
Allowed the date picker to be displayed as an inline element vs a
dropdown off an input element.

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -15,6 +15,11 @@
     &.timepicker-sbs {
         width: 600px;
     }
+	
+	&.inline {
+		border: 1px solid #ccc;
+		border: 1px solid rgba(0,0,0,.15);
+	}
 
     &.bottom {
         &:before {
