[FIX] display improvement on calendar week option

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -137,6 +137,7 @@
             font-size: 10px;
             height: 20px;
             line-height: 20px;
+            color: @gray-light;
         }
 
         &.day
