fixed error on condition and also changed px to ems

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -136,7 +136,7 @@
         width: 54px;
 
         &.cw {
-            font-size: 10px;
+            font-size: .8em;
             height: 20px;
             line-height: 20px;
             color: @gray-light;
