Implemented #141 & #283 and refactored template functions

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -114,8 +114,17 @@
 
     .picker-switch {
         text-align: center;
-        a {
-            width: 100%;
+        td {
+            padding: 0;
+            margin: 0;
+            height: auto;
+            width: auto;
+            line-height: inherit;
+            span {
+                line-height: 2.5;
+                height: 2.5em;
+                width: 100%;
+            }
         }
     }
 
