fixed time picker arrows box-shadow when active

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -90,6 +90,10 @@
     a[data-action] {
       padding: 6px 0;
     }
+    
+    a[data-action]:active {
+        box-shadow: none;
+    }
 
     .timepicker-hour, .timepicker-minute, .timepicker-second {
         width: 54px;
