Removed internal calls to public functions, changed event types to properly named namespace, updated tests for passing new event names, minor text fixes and merged #517 to v4beta

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -91,6 +91,10 @@
       padding: 6px 0;
     }
 
+    a[data-action]:active {
+      box-shadow: none;
+    }
+
     .timepicker-hour, .timepicker-minute, .timepicker-second {
         width: 54px;
         font-weight: bold;
