--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -193,7 +193,7 @@
         &.active,
         &.active:hover {
             background-color: @btn-primary-bg;
-            color: #fff;
+            color: @btn-primary-color;
             text-shadow: 0 -1px 0 rgba(0,0,0,.25);
         }
 
@@ -223,7 +223,7 @@
 
             &.active {
                 background-color: @btn-primary-bg;
-                color: #fff;
+                color: @btn-primary-color;
                 text-shadow: 0 -1px 0 rgba(0,0,0,.25);
             }
 
