--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -4,91 +4,90 @@
  * https://github.com/Eonasdan/bootstrap-datetimepicker/
  */
 .bootstrap-datetimepicker-widget {
-    width: 250px;
-    padding: 4px;
-    border-radius: @border-radius-base;
+    &.dropdown-menu {
+        margin: 2px 0;
+        padding: 4px;
+        width: 19em;
 
-    &.timepicker-sbs {
-        width: 600px;
-    }
+        &.timepicker-sbs {
+            @media (min-width: @screen-sm-min) {
+                width: 38em;
+            }
+            @media (min-width: @screen-md-min) {
+                width: 38em;
+            }
+            @media (min-width: @screen-lg-min) {
+                width: 38em;
+            }
+        }
 
-    &.bottom {
-        &:before {
+        &:before, &:after {
             content: '';
             display: inline-block;
-            border-left: 7px solid transparent;
-            border-right: 7px solid transparent;
-            border-bottom: 7px solid #ccc;
-            border-bottom-color: rgba(0,0,0,.2);
             position: absolute;
-            top: -7px;
-            left: 7px;
         }
 
-        &:after {
-            content: '';
-            display: inline-block;
-            border-left: 6px solid transparent;
-            border-right: 6px solid transparent;
-            border-bottom: 6px solid white;
-            position: absolute;
-            top: -6px;
-            left: 8px;
+        &.bottom {
+            &:before {
+                border-left: 7px solid transparent;
+                border-right: 7px solid transparent;
+                border-bottom: 7px solid #ccc;
+                border-bottom-color: rgba(0,0,0,.2);
+                top: -7px;
+                left: 7px;
+            }
+
+            &:after {
+                border-left: 6px solid transparent;
+                border-right: 6px solid transparent;
+                border-bottom: 6px solid white;
+                top: -6px;
+                left: 8px;
+            }
+        }
+
+        &.top {
+            &:before {
+                border-left: 7px solid transparent;
+                border-right: 7px solid transparent;
+                border-top: 7px solid #ccc;
+                border-top-color: rgba(0,0,0,.2);
+                bottom: -7px;
+                left: 6px;
+            }
+
+            &:after {
+                border-left: 6px solid transparent;
+                border-right: 6px solid transparent;
+                border-top: 6px solid white;
+                bottom: -6px;
+                left: 7px;
+            }
+        }
+
+        &.pull-right {
+            &:before {
+                left: auto;
+                right: 6px;
+            }
+
+            &:after {
+                left: auto;
+                right: 7px;
+            }
         }
     }
 
-    &.top {
-        &:before {
-            content: '';
-            display: inline-block;
-            border-left: 7px solid transparent;
-            border-right: 7px solid transparent;
-            border-top: 7px solid #ccc;
-            border-top-color: rgba(0,0,0,.2);
-            position: absolute;
-            bottom: -7px;
-            left: 6px;
-        }
-
-        &:after {
-            content: '';
-            display: inline-block;
-            border-left: 6px solid transparent;
-            border-right: 6px solid transparent;
-            border-top: 6px solid white;
-            position: absolute;
-            bottom: -6px;
-            left: 7px;
-        }
-    }
-
-    & .dow {
-        width: 14.2857%;
-    }
-
-    &.pull-right {
-        &:before {
-            left: auto;
-            right: 6px;
-        }
-
-        &:after {
-            left: auto;
-            right: 7px;
-        }
-    }
-
-    >ul {
-        list-style-type: none;
+    .list-unstyled {
         margin: 0;
     }
 
     a[data-action] {
-      padding: 6px 0;
+        padding: 6px 0;
     }
 
     a[data-action]:active {
-      box-shadow: none;
+        box-shadow: none;
     }
 
     .timepicker-hour, .timepicker-minute, .timepicker-second {
@@ -99,17 +98,13 @@
     }
 
     button[data-action] {
-      padding: 6px;
+        padding: 6px;
     }
 
     table[data-hour-format="12"] .separator {
         width: 4px;
         padding: 0;
         margin: 0;
-    }
-
-    .datepicker > div {
-        display: none;
     }
 
     .picker-switch {
@@ -137,6 +132,31 @@
     th {
         text-align: center;
         border-radius: @border-radius-base;
+    }
+
+    th {
+        height: 20px;
+        line-height: 20px;
+        width: 20px;
+
+        &.picker-switch {
+            width: 145px;
+        }
+
+        &.disabled,
+        &.disabled:hover {
+            background: none;
+            color: @gray-light;
+            cursor: not-allowed;
+        }
+    }
+
+    thead tr:first-child th {
+        cursor: pointer;
+
+        &:hover {
+            background: @gray-lighter;
+        }
     }
 
     td {
@@ -193,9 +213,9 @@
             text-shadow: 0 -1px 0 rgba(0,0,0,.25);
         }
 
-            &.active.today:before {
-                border-bottom-color: #fff;
-            }
+        &.active.today:before {
+            border-bottom-color: #fff;
+        }
 
         &.disabled,
         &.disabled:hover {
@@ -234,52 +254,5 @@
                 cursor: not-allowed;
             }
         }
-    }
-
-    th {
-        height: 20px;
-        line-height: 20px;
-        width: 20px;
-
-        &.picker-switch {
-            width: 145px;
-        }
-
-        &.disabled,
-        &.disabled:hover {
-            background: none;
-            color: @gray-light;
-            cursor: not-allowed;
-        }
-    }
-
-    thead tr:first-child th {
-        cursor: pointer;
-
-        &:hover {
-            background: @gray-lighter;
-        }
-    }
-
-    &.left-oriented {
-        &:before {
-            left: auto;
-            right: 6px;
-        }
-
-        &:after {
-            left: auto;
-            right: 7px;
-        }
-    }
-}
-
-.bootstrap-datetimepicker-widget ul.list-unstyled li div.timepicker div.timepicker-picker table.table-condensed tbody > tr > td {
-    padding: 0px !important;
-}
-
-@media screen and (max-width: 767px) {
-    .bootstrap-datetimepicker-widget.timepicker-sbs {
-        width: 283px;
     }
 }
