--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -15,6 +15,13 @@
     &.timepicker-sbs {
         width: 600px;
     }
+	
+	&.inline {
+		border: 1px solid #ccc;
+		border: 1px solid rgba(0,0,0,.15);
+		width: 100%;
+		max-width: 250px;
+	}
 
     &.bottom {
         &:before {
