added reference to scaffolding.less

--- a/src/less/bootstrap-datetimepicker-build.less
+++ b/src/less/bootstrap-datetimepicker-build.less
@@ -1,5 +1,8 @@
 // Import boostrap variables including default color palette and fonts
 @import "../../node_modules/bootstrap/less/variables.less";
 
+//import scaffolding for sr-only mixin
+@import "../../node_modules/bootstrap/less/scaffolding.less";
+
 // Import datepicker component
 @import "bootstrap-datetimepicker.less";
