--- a/src/less/bootstrap-datetimepicker-build.less
+++ b/src/less/bootstrap-datetimepicker-build.less
@@ -1,5 +1,16 @@
 // Import boostrap variables including default color palette and fonts
-@import "../../node_modules/bootstrap/less/variables.less";
+@import "../../node_modules/bootstrap/less/variables";
 
 // Import datepicker component
-@import "bootstrap-datetimepicker.less";
+@import "bootstrap-datetimepicker";
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
