Fix violation of the Content Security Policy directive 'style-src' 'self'

--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -169,6 +169,10 @@
     .picker-switch {
         text-align: center;
 
+        &.accordion-toggle > a.btn {
+            width: 100%;
+        }
+
         &::after {
           .sr-only();
           content: "Toggle Date and Time Screens";
