--- a/src/less/_bootstrap-datetimepicker.less
+++ b/src/less/_bootstrap-datetimepicker.less
@@ -1,6 +1,6 @@
 /*!
  * Datetimepicker for Bootstrap 3
- * ! version : 4.7.14
+ * ! version : 4.13.28
  * https://github.com/Eonasdan/bootstrap-datetimepicker/
  */
 @bs-datetimepicker-timepicker-font-size: 1.2em;
@@ -333,6 +333,14 @@
             height: 27px;
             line-height: 27px;
         }
+    }
+	
+	&.wider {
+		width: 21em;
+	}
+
+	& .datepicker-decades .decade {
+        line-height: 1.8em !important;
     }
 }
 
