--- a/src/less/bootstrap-datetimepicker-build.less
+++ b/src/less/bootstrap-datetimepicker-build.less
@@ -4,7 +4,7 @@
 // Import datepicker component
 @import "_bootstrap-datetimepicker.less";
 
-
+//this is here so the compiler doesn't complain about a missing bootstrap mixin
 .sr-only {
   position: absolute;
   width: 1px;
