Add ability to disable and enable inline datepicker
Disabling the datepicker was causing it to be hidden which prevented it
from being enabled.  I added functionality so that when disabled for
inline datepickers all events are removed and the control is basically
set to disabled, re-enabling the datepicker adds the events back and
updates the control.
I also fixed an issue with the css when disabling elements, this was an
issue for the forward and back buttons on the control when they were
disabled but still had the hover effect.  This was fixed by tweaking the
css and the specificity.

--- a/src/less/_bootstrap-datetimepicker.less
+++ b/src/less/_bootstrap-datetimepicker.less
@@ -200,9 +200,22 @@
             height: 20px;
             line-height: 20px;
             width: 20px;
+            cursor: pointer;
+
+            &:hover {
+                background: @bs-datetimepicker-btn-hover-bg;
+            }
 
             &.picker-switch {
                 width: 145px;
+            }
+
+            &.dow {
+                cursor: auto;
+            }
+
+            &.dow:hover {
+                background: none;
             }
 
             &.disabled,
@@ -220,14 +233,6 @@
             &.next::after {
                 .sr-only();
                 content: "Next Month";
-            }
-        }
-
-        & thead tr:first-child th {
-            cursor: pointer;
-
-            &:hover {
-                background: @bs-datetimepicker-btn-hover-bg;
             }
         }
 
@@ -335,7 +340,7 @@
             line-height: 27px;
         }
     }
-	
+
 	&.wider {
 		width: 21em;
 	}
