Fix layout when AM/PM button is shown in side-by-side mode

--- a/src/less/_bootstrap-datetimepicker.less
+++ b/src/less/_bootstrap-datetimepicker.less
@@ -23,6 +23,20 @@
         padding: 4px;
         width: 19em;
 
+        &.timepicker-sbs.wider {
+            @media (min-width: @screen-sm-min) {
+                width: 43em;
+            }
+
+            @media (min-width: @screen-md-min) {
+                width: 43em;
+            }
+
+            @media (min-width: @screen-lg-min) {
+                width: 43em;
+            }
+        }
+
         &.timepicker-sbs {
             @media (min-width: @screen-sm-min) {
                 width: 38em;
@@ -335,7 +349,7 @@
             line-height: 27px;
         }
     }
-	
+
 	&.wider {
 		width: 21em;
 	}
