add hover to .input-group-addon

--- a/src/less/_bootstrap-datetimepicker.less
+++ b/src/less/_bootstrap-datetimepicker.less
@@ -349,5 +349,9 @@
 .input-group.date {
     & .input-group-addon {
         cursor: pointer;
+        &:hover {
+            background-color: darken(@btn-default-bg, 10%);
+            border-color: darken(@btn-default-border, 12%);
+        }
     }
 }
